--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
-    <title>DESING ART</title>
+    <title>ARTE DE DISEÑO</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
+    <meta content="Plantilla de sitio web gratuita" name="keywords">
+    <meta content="Plantilla de sitio web gratuita" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -18,64 +18,64 @@
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
+    <!-- Hojas de estilo de bibliotecas -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
+    <!-- Hoja de estilo Bootstrap personalizada -->
     <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Navbar Start -->
+    <!-- Inicio de la barra de navegación -->
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
-                <h1 class="m-0 display-4 text-uppercase text-white">DESING ART</h1>
+                <h1 class="m-0 display-4 text-uppercase text-white">ARTE DE DISEÑO</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto p-4">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link active">About</a>
-                    <a href="service.html" class="nav-item nav-link">Service</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="index.html" class="nav-item nav-link">Inicio</a>
+                    <a href="about.html" class="nav-item nav-link active">Mision y vision</a>
+                    <a href="service.html" class="nav-item nav-link">Servicio</a>
+                    <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
             </div>
         </nav>
     </div>
-    <!-- Navbar End -->
+    <!-- Fin de la barra de navegación -->
 
 
-    <!-- Page Header Start -->
+    <!-- Inicio del encabezado de la página -->
     <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
         <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
-            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">About Us</h1>
+            <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Acerca de Nosotros</h1>
             <div class="d-inline-flex mb-lg-5">
-                <p class="m-0 text-white"><a class="text-white" href="">Home</a></p>
+                <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
                 <p class="m-0 text-white px-2">/</p>
-                <p class="m-0 text-white">About Us</p>
+                <p class="m-0 text-white">Acerca de Nosotros</p>
             </div>
         </div>
     </div>
-    <!-- Page Header End -->
+    <!-- Fin del encabezado de la página -->
 
 
-    <!-- About Start -->
+    <!-- Inicio de la sección Acerca de -->
     <div class="container-fluid py-5">
         <div class="container">
             <div class="section-title">
-                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">About Us</h4>
-                <h1 class="display-4">Serving Since 1950</h1>
+                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Mision y Vision</h4>
+                <h1 class="display-4">Sirviendo Desde 1950</h1>
             </div>
             <div class="row">
                 <div class="col-lg-4 py-0 py-lg-5">
                     <h1 class="mb-3">Visión</h1>
                     <h5 class="mb-3">En Design Art, aspiramos a ser líderes en la industria del diseño web, innovando constantemente y adoptando nuevas tecnologías para ofrecer las mejores experiencias digitales. </h5>
                     <p>Nuestro objetivo es impactar positivamente en el crecimiento de las marcas a través de un diseño creativo y estratégico que se adapte a las tendencias del mercado.</p>
-                    <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Learn More</a>
+                    <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Más Información</a>
                 </div>
                 <div class="col-lg-4 py-5 py-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
@@ -85,23 +85,22 @@
                 <div class="col-lg-4 py-0 py-lg-5">
                     <h1 class="mb-3">Misión</h1>
                     <p>Nuestra misión en Design Art es crear soluciones de diseño web personalizadas que ayuden a las empresas a establecer una presencia digital efectiva. Nos comprometemos a ofrecer un servicio excepcional y a construir relaciones sólidas con nuestros clientes, asegurando que cada proyecto refleje sus valores y visión única.</p>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Diseño de páginas web personalizadas</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Optimización para motores de búsqueda (SEO)</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Desarrollo de aplicaciones web</h5>
-                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Servicios de branding y diseño gráfico</h5>
-                    <a href="" class="btn btn-primary font-weight-bold py-2 px-4 mt-2">Learn More</a>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
+                    <h5 class="mb-3"><i class="fa fa-check text-primary mr-3"></i>Lorem ipsum dolor sit amet</h5>
+                    <a href="" class="btn btn-primary font-weight-bold py-2 px-4 mt-2">Más Información</a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- About End -->
+    <!-- Fin de la sección Acerca de -->
 
 
-<!-- Footer Start -->
+<!-- Pie de Página Inicio -->
 <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
     <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Get In Touch</h4>
+            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Contáctanos</h4>
             <p><i class="fa fa-map-marker-alt mr-2"></i>Campus Balzar, Universidad de Cuenca, Ecuador</p>
             <p><i class="fa fa-phone-alt mr-2"></i>+593 84687123</p>
             <p><i class="fa fa-phone-alt mr-2"></i>+593 99 485 5755</p>
@@ -109,46 +108,22 @@
             <p class="m-0"><i class="fa fa-envelope mr-2"></i>rosa.maldonado@ucuenca.edu.ec</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Follow Us</h4>
-            <p>Conéctate con nosotros para conocer nuestras últimas creaciones y novedades.</p>
-            <div class="d-flex justify-content-start">
-                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-lg btn-outline-light btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Enlaces rápidos</h4>
+            <div class="d-flex flex-column justify-content-start">
+                <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
+                <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Nosotros</a>
+                <a class="text-white mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
+                <a class="text-white mb-2" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Newsletter</h4>
-            <p>Suscríbete a nuestro boletín y mantente al tanto de nuestros nuevos proyectos y servicios.</p>
-            <div class="w-100">
-                <div class="input-group">
-                    <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
-                    <div class="input-group-append">
-                        <button class="btn btn-primary font-weight-bold px-3">Sign Up</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <img>
-    </div>
-    <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Design Art</a>. All Rights Reserved.</p>
-        <p class="m-0 text-white">Designed by <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex</a></p>
     </div>
 </div>
-<!-- Footer End -->
-
-
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
-
+<!-- Pie de Página Fin -->
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
