--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DISEÑO ARTE</title>
+    <title>Design Art</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Plantilla de sitio web gratis" name="keywords">
     <meta content="Plantilla de sitio web gratis" name="description">
@@ -31,7 +31,7 @@
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
-                <h1 class="m-0 display-4 text-uppercase text-white">DISEÑO ARTE</h1>
+                <h1 class="m-0 display-4 text-uppercase text-white">Design Art</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -139,34 +139,59 @@
     <!-- Contacto Fin -->
 
 
-<!-- Pie de Página Inicio -->
-<div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
-    <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
-        <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Contáctanos</h4>
-            <p><i class="fa fa-map-marker-alt mr-2"></i>Campus Balzar, Universidad de Cuenca, Ecuador</p>
-            <p><i class="fa fa-phone-alt mr-2"></i>+593 84687123</p>
-            <p><i class="fa fa-phone-alt mr-2"></i>+593 99 485 5755</p>
-            <p class="m-0"><i class="fa fa-envelope mr-2"></i>johmayra.velez@ucuenca.edu.ec</p>
-            <p class="m-0"><i class="fa fa-envelope mr-2"></i>rosa.maldonado@ucuenca.edu.ec</p>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-5">
-            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Enlaces rápidos</h4>
-            <div class="d-flex flex-column justify-content-start">
-                <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
-                <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Misión y Visión </a>
-                <a class="text-white mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
-                <a class="text-white mb-2" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
+    <!-- Footer Start -->
+    <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
+        <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Contáctanos</h4>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>Campus Balzar, Universidad de Cuenca, Ecuador</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>+593 84687123</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>+593 99 485 5755</p>
+                <p class="m-0"><i class="fa fa-envelope mr-2"></i>johmayra.velez@ucuenca.edu.ec</p>
+                <p class="m-0"><i class="fa fa-envelope mr-2"></i>rosa.maldonado@ucuenca.edu.ec</p>
             </div>
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Síguenos</h4>
+                <p>Conéctate con nosotros para conocer nuestras últimas creaciones y novedades.</p>
+                <div class="d-flex justify-content-start">
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Boletín</h4>
+                <p>Suscríbete a nuestro boletín y mantente al tanto de nuestros nuevos proyectos y servicios.</p>
+                <div class="w-100">
+                    <div class="input-group">
+                        <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Tu Correo Electrónico">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary font-weight-bold px-3">Suscribirse</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img>
+        </div>
+        <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
+            <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Design Art</a>. Todos los derechos reservados.</p>
+            <p class="m-0 text-white">Diseñado por <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex</a></p>
         </div>
     </div>
-</div>
-<!-- Pie de Página Fin -->
+    
+    <!-- Footer End -->
+
+
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
