--- a/index.html
+++ b/index.html
@@ -177,34 +177,58 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white py-5 px-sm-3 px-md-5">
-        <div class="container">
-            <div class="row pt-5">
-                <div class="col-lg-4 col-md-6 mb-5">
-                    <h4 class="text-primary mb-4">Ponte en Contacto</h4>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>Av. Principal 123, Cuenca, Ecuador</p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>0994855755 - 0984687123</p>
-                    <p><i class="fa fa-envelope mr-2"></i>rosa.maldonado@ucuenca.edu.ec 
-                    johmayra.velez@ucuenca.edu.ec</p>
-                    <div class="d-flex justify-content-start mt-4">
-                        <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-square" href="#"><i class="fab fa-instagram"></i></a>
+    <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
+        <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Contáctanos</h4>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>Campus Balzar, Universidad de Cuenca, Ecuador</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>+593 84687123</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>+593 99 485 5755</p>
+                <p class="m-0"><i class="fa fa-envelope mr-2"></i>johmayra.velez@ucuenca.edu.ec</p>
+                <p class="m-0"><i class="fa fa-envelope mr-2"></i>rosa.maldonado@ucuenca.edu.ec</p>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Síguenos</h4>
+                <p>Conéctate con nosotros para conocer nuestras últimas creaciones y novedades.</p>
+                <div class="d-flex justify-content-start">
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Boletín</h4>
+                <p>Suscríbete a nuestro boletín y mantente al tanto de nuestros nuevos proyectos y servicios.</p>
+                <div class="w-100">
+                    <div class="input-group">
+                        <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Tu Correo Electrónico">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary font-weight-bold px-3">Suscribirse</button>
+                        </div>
                     </div>
                 </div>
             </div>
+            <img>
+        </div>
+        <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
+            <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Design Art</a>. Todos los derechos reservados.</p>
+            <p class="m-0 text-white">Diseñado por <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex</a></p>
         </div>
     </div>
+    
     <!-- Footer End -->
 
+
     <!-- Back to Top -->
-    <a href="#" class="btn btn-primary px-4 back-to-top"><i class="fa fa-angle-up"></i></a>
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
+
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
