--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DISEÑO ARTE</title>
+    <title>Design Art</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Plantilla de sitio web gratuito" name="keywords">
     <meta content="Plantilla de sitio web gratuito" name="description">
@@ -31,7 +31,7 @@
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
-                <h1 class="m-0 display-4 text-uppercase text-white">DISEÑO ARTE</h1>
+                <h1 class="m-0 display-4 text-uppercase text-white">Design Art</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -159,7 +159,7 @@
             <img>
         </div>
         <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-            <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Diseño Arte</a>. Todos los derechos reservados.</p>
+            <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Design Art</a>. Todos los derechos reservados.</p>
             <p class="m-0 text-white">Diseñado por <a class="font-weight-bold" href="https://htmlcodex.com">HTML Codex</a></p>
         </div>
     </div>
